Adding Test class for Optinal-class